--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,11 @@ body,h1,h2,h3,h4,h5,h6 {
 }
 
 .emoji-row-1, .emoji-row-2 {
-    font-size: 400%;
     padding-top: 5rem;
+}
+
+.icon-large {
+    font-size: 400%;
 }
 
 .custom-btn-details, .custom-btn-like, .custom-btn-submit {
