--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,11 @@ body,h1,h2,h3,h4,h5,h6 {
     opacity: 100%;
 }
 
+
+.opacityMax{
+    opacity: 100%;
+}
+
 .card {
     margin: 20px;
     background-color: var(--linen);
